--- a/resources/css/style.css
+++ b/resources/css/style.css
@@ -13,3 +13,24 @@ h1 {
   color: Aquamarine;
   font-size: 16px;
 }
+
+.vid {
+  font-size: 42px;
+  font-weight: 300;
+}
+
+.tent {
+  font-size: 21px;
+  color: gray;
+}
+
+.phone {
+  font-size: 42px;
+  font-weight: 300;
+}
+
+.footer {
+  text-align: right;
+  color: gray;
+  font-size: 21px;
+}
